fix overflow getting cut off

--- a/blocks/station-finder/assets/frontend.scss
+++ b/blocks/station-finder/assets/frontend.scss
@@ -19,7 +19,7 @@
 
 :root {
 	.wp-block-cumulus-gutenberg-station-finder {
-		height: 100vh;
+		min-height: 100vh;
 	}
 	.crsg-sf-loading,
 	.crsg-sf-loading:after {
